Refacto: Remove duplicate codes, unused imports, standard api call names, update some variables/functions names, remove magic strings, add comments, performance improvements by remove unnecessary calls, show settings page only on desktop